fixed VolumeOperationResultTest junits
Signed-off-by: Nikhil Suri <nikhil.suri@databricks.com>