@@ -1,6 +1,7 @@
 package com.databricks.jdbc.api.impl.volume;
 
 import static com.databricks.jdbc.common.DatabricksJdbcConstants.ALLOWED_VOLUME_INGESTION_PATHS;
+import static com.databricks.jdbc.common.DatabricksJdbcConstants.ALLOW_STREAM_BASED_VOLUME_OPERATIONS;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.when;
@@ -20,8 +21,10 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.nio.file.Files;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Stream;
 import org.apache.http.StatusLine;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpDelete;
@@ -31,6 +34,9 @@ import org.apache.http.entity.InputStreamEntity;
 import org.apache.http.entity.StringEntity;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -54,6 +60,16 @@ public class VolumeOperationResultTest {
           .setIsVolumeOperation(true)
           .setTotalRowCount(1L)
           .setSchema(new ResultSchema().setColumnCount(4L));
+
+  static Stream<Arguments> allowStreamBasedVolumeOperationsProvider() {
+    return Stream.of(
+        Arguments.of("true", true),
+        Arguments.of("True", true),
+        Arguments.of("TrUe", true),
+        Arguments.of("null", false),
+        Arguments.of("false", false),
+        Arguments.of("random_Value", false));
+  }
 
   @Test
   public void testGetResult_Get() throws Exception {
@@ -88,35 +104,34 @@ public class VolumeOperationResultTest {
     }
   }
 
-  @Test
-  public void testGetResult_InputStream_Get() throws Exception {
+  @ParameterizedTest
+  @MethodSource("allowStreamBasedVolumeOperationsProvider")
+  public void testGetResult_InputStream_Get(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ALLOW_STREAM_BASED_VOLUME_OPERATIONS, propertyValue));
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
-    when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
-    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
+      when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
 
+    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
 
     assertTrue(volumeOperationResult.hasNext());
     assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
-
-    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
-    assertEquals(
-        "test",
-        new String(
-            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
+    if (expected) {
+      assertSuccessVolumeGetOperations(volumeOperationResult);
+    } else {
+      assertFailedVolumeOperations(volumeOperationResult);
+    }
   }
 
   @Test
@@ -347,15 +362,20 @@ public class VolumeOperationResultTest {
     assertTrue(file.delete());
   }
 
-  @Test
-  public void testGetResult_Put_withInputStream() throws Exception {
+  @ParameterizedTest
+  @MethodSource("allowStreamBasedVolumeOperationsProvider")
+  public void testGetResult_Put_withInputStream(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ALLOW_STREAM_BASED_VOLUME_OPERATIONS, propertyValue));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     when(statement.getInputStreamForUCVolume())
         .thenReturn(new InputStreamEntity(new ByteArrayInputStream("test-put".getBytes()), 10L));
@@ -363,19 +383,17 @@ public class VolumeOperationResultTest {
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
+    if (expected) {
+      assertSuccessVolumePutOperations(volumeOperationResult);
+    } else {
+      assertFailedVolumeOperations(volumeOperationResult);
+    }
   }
 
   @Test
   public void testGetResult_Put_withNullInputStream() throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ALLOW_STREAM_BASED_VOLUME_OPERATIONS, "True"));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
@@ -690,6 +708,44 @@ public class VolumeOperationResultTest {
     }
   }
 
+  private void assertSuccessVolumePutOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.hasNext());
+    assertEquals(-1, volumeOperationResult.getCurrentRow());
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+  }
+
+  private void assertSuccessVolumeGetOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+
+    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
+    assertEquals(
+        "test",
+        new String(
+            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
+  }
+
+  private void assertFailedVolumeOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    try {
+      volumeOperationResult.next();
+      fail("Should throw DatabricksSQLException");
+    } catch (DatabricksSQLException e) {
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: Volume operations on stream not allowed",
+          e.getMessage());
+    }
+  }
+
   private void setupCommonInteractions() throws Exception {
     when(resultHandler.hasNext())
         .thenReturn(true)
@@ -698,7 +754,16 @@ public class VolumeOperationResultTest {
         .thenReturn(false);
     when(resultHandler.next()).thenReturn(true).thenReturn(false);
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
-    when(session.getClientInfoProperties())
-        .thenReturn(Map.of(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS));
+    buildClientInfoProperties(Collections.emptyMap());
+  }
+
+  private void buildClientInfoProperties(Map<String, String> overrides) {
+    Map<String, String> clientInfoProperties = new HashMap<>();
+    clientInfoProperties.put(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS);
+
+    if (overrides != null) {
+      clientInfoProperties.putAll(overrides); // add or override test-specific keys
+    }
+    when(session.getClientInfoProperties()).thenReturn(clientInfoProperties);
   }
 }
